[package]
name = "solend-tvl-calculator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

# Solana
solana-account-decoder = "1.7.12"
solana-client = "1.7.12"
solana-program = "1.7.12"
solana-sdk = "1.7.12"
spl-token-lending = { git = "https://github.com/solendprotocol/solana-program-library" }
